--- a/PVD-data/styles.css
+++ b/PVD-data/styles.css
@@ -1,33 +1,8 @@
-img, p, h1, h2, .divider{
-	width: 100%;
-	max-width: 640px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-img {
-    display: block;
-    padding: 15px 0px;
-}
-
-.big_photo {
-    width: 100%;
-    max-width: 400px; 
-}
-
-p {
-	font-size: 18px;
-	line-height: 1.4;
-    font-family: "Crimson Text";
-}
-
-h1, h2 {
-    font-family: "Roboto";
-}
-
-.divider {
-    height: 2px;
-    background-color: #0868ac;
-    margin-top: 10px;
-    margin-bottom: 10px;
+#myTooltip {
+	position: absolute;
+	pointer-events: none;
+    padding: 15px;
+	background-color: white;
+	border: 1px solid black;
+    opacity: 0;
 }
